--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -713,8 +713,9 @@ body {
         font-size: 100px;
         margin: 0 auto;
         margin-left: 280px;
-        text-shadow: blue -1px -2px 10px,0 0 20px #fefcc9, 10px -10px 30px #feec85, -20px -20px 40px #ffae34, 20px -40px 50px #ec760c, -20px -60px 60px #cd4606, 0 -80px 70px #973716, 10px -90px 80px #451b0e;
-       
+        //color: white;
+        //text-shadow: blue -1px -2px 10px,0 0 20px #fefcc9, 10px -10px 30px #feec85, -20px -20px 40px #ffae34, 20px -40px 50px #ec760c, -20px -60px 60px #cd4606, 0 -80px 70px #973716, 10px -90px 80px #451b0e;
+       text-shadow: 0 0 10px #fefcc9, 0 0 20px #feec85, 0 0 30px #ffae34, 0 0 40px #ec760c, 0 0 70px #cd4606, 0 0 80px #973716, 0 0 100px #451b0e, 0 0 150px #ff00de;
 
     }
    
@@ -731,8 +732,8 @@ body {
         font-size: 90px;
         margin: 0 auto;
         margin-left: 55px;
-        text-shadow: blue -1px -2px 10px,0 0 20px #fefcc9, 10px -10px 30px #feec85, -20px -20px 40px #ffae34, 20px -40px 50px #ec760c, -20px -60px 60px #cd4606, 0 -80px 70px #973716, 10px -90px 80px #451b0e;
-        
+        //text-shadow: blue -1px -2px 10px,0 0 20px #fefcc9, 10px -10px 30px #feec85, -20px -20px 40px #ffae34, 20px -40px 50px #ec760c, -20px -60px 60px #cd4606, 0 -80px 70px #973716, 10px -90px 80px #451b0e;
+        text-shadow: 0 0 10px #fefcc9, 0 0 20px #feec85, 0 0 30px #ffae34, 0 0 40px #ec760c, 0 0 70px #cd4606, 0 0 80px #973716, 0 0 100px #451b0e, 0 0 150px #ff00de;
     }
    
 }
@@ -749,8 +750,8 @@ body {
         font-size: 90px;
         margin: 0 auto;
         margin-left: 130px;
-        text-shadow: blue -1px -2px 10px,0 0 20px #fefcc9, 10px -10px 30px #feec85, -20px -20px 40px #ffae34, 20px -40px 50px #ec760c, -20px -60px 60px #cd4606, 0 -80px 70px #973716, 10px -90px 80px #451b0e;
-        
+        //text-shadow: blue -1px -2px 10px,0 0 20px #fefcc9, 10px -10px 30px #feec85, -20px -20px 40px #ffae34, 20px -40px 50px #ec760c, -20px -60px 60px #cd4606, 0 -80px 70px #973716, 10px -90px 80px #451b0e;
+        text-shadow: 0 0 10px #fefcc9, 0 0 20px #feec85, 0 0 30px #ffae34, 0 0 40px #ec760c, 0 0 70px #cd4606, 0 0 80px #973716, 0 0 100px #451b0e, 0 0 150px #ff00de;
     }
    
 }
@@ -863,9 +864,9 @@ body {
 
 .password {
     width: 550px;
-    height: 100px;
+    height: 80px;
     display: block;
-    font-size: 50px;
+    font-size: 40px;
     font-weight: bolder;
     background-color: #FFFFCC;
     border: 1px solid black;
@@ -886,8 +887,8 @@ body {
     display: block;
     margin-left: 200px;
     width: 550px;
-    height: 100px;
-    font-size: 50px;
+    height: 80px;
+    font-size: 40px;
     font-weight: bolder;
     background-color: #FFFFCC;
     border: 1px solid black;
@@ -975,7 +976,9 @@ body {
     border: 1px solid black;
     transform: rotate(45deg);
     position: relative;
-    box-shadow: 3px 3px 10px 2px orange;
+    //box-shadow: 3px 3px 10px 2px orange;
+    box-shadow: inset 0 0 10px black;
+    
     
 }
 
@@ -1006,6 +1009,7 @@ body {
     margin-bottom: 20px;
     text-align: center;
     font-size: 30px;
+    font-weight: bolder;
     cursor: pointer;
     border: 1px solid black;
     background-image: url(http://www.actioncat.com/platinum/backs/background-orange.gif);
@@ -1014,7 +1018,8 @@ body {
     right: 110px;
     bottom: 300px;
     border-radius: 100px;
-    box-shadow: 3px 3px 0px 0px red;
+    box-shadow: inset 0px 0px 5px black;
+
 
   
 }
@@ -1032,9 +1037,11 @@ body {
     background-image: url(http://www.ipad-wallpapers.us/bgs/red-grid-pattern-ipad-background-h.jpg);
     color: white;
     font-size: 30px;
+    font-weight: bold;
     line-height: 150px;
     text-align: center;
-    box-shadow: 2px 3px 6px 2px orange;
+    //box-shadow: 2px 3px 6px 2px orange;
+    box-shadow: inset 0 0 10px black;
     
 }
 
@@ -1048,6 +1055,7 @@ body {
     list-style-type: none;
     color: white;
     font-size: 30px;
+    font-weight: bolder;
     text-align: center;
     cursor: pointer;
     line-height: 150px;
@@ -1059,7 +1067,8 @@ body {
     width: 150px;
     border: 1px solid black;
     border-radius: 100px;
-    box-shadow: 2px 3px 9px 0px orange;
+    //box-shadow: 2px 3px 9px 0px orange;
+    box-shadow: inset 0 0 10px black;
 }
 
 .hightop2 {
@@ -1075,9 +1084,11 @@ body {
     list-style-type: none;
     color: white;
     font-size: 30px;
+    font-weight: bolder;
     text-align: center;
     line-height: 150px;
-    box-shadow: 2px 3px 9px 0px orange;
+    box-shadow: inset 0 0 10px black;
+    //  box-shadow: 2px 3px 9px 0px orange;
 }
 
 #overlay {
@@ -1169,7 +1180,7 @@ body {
 .totalbox {
     border: 1px solid red;
     width: 400px;
-    height: 685px;
+    height: 700px;
     margin: 0 auto;
     position: relative;
     bottom: 130px;
@@ -1227,6 +1238,7 @@ span {
     line-height: 30px;
     display: block;
     text-align: center;
+    box-shadow: inset 0 0 5px black;
 
 
 
@@ -1245,6 +1257,7 @@ span {
     //text-indent: 10px;
     line-height: 30px;
     text-align: center;
+    box-shadow: inset 0 0 5px black;
 }
 
 .totaltotal {
@@ -1260,6 +1273,7 @@ span {
     //text-indent: 10px;
     line-height: 30px;
     text-align: center;
+    box-shadow: inset 0 0 5px black;
 }
 
 .sendmaster{
@@ -1278,14 +1292,16 @@ span {
     border: 1px solid black;
     list-style-type: none;
     text-align: center;
-    line-height: 40px;
+    line-height: 43px;
     //color: white;
     background-image: url(http://dev.w3.org/csswg/css-images-3/radial1.png);
     position: relative;
-    bottom: 145px;
+    bottom: 155px;
     left: 10px;
     box-shadow: inset 0 0 10px black;
     cursor: pointer;
+    font-size: 23px;
+    border-radius: 8px;
 
 
 }
@@ -1297,13 +1313,15 @@ span {
     border: 1px solid black;
     list-style-type: none;
     text-align: center;
-    line-height: 40px;
+    line-height: 43px;
     //color: white;
     background-image: url(http://dev.w3.org/csswg/css-images-3/radial1.png);
     position: relative;
-    bottom: 140px;
+    bottom: 145px;
     left: 10px;
     box-shadow: inset 0 0 10px black;
+    font-size: 23px;
+    border-radius: 8px;
 }
 
 .pay{
@@ -1314,12 +1332,13 @@ span {
     list-style-type: none;
     text-align: center;
     line-height: 40px;
-    color: white;
-    background-color: red;
+    background-image: url(http://dev.w3.org/csswg/css-images-3/radial1.png);
     position: relative;
     bottom: 135px;
     left: 10px;
     box-shadow: inset 0 0 10px #000000;
+    font-size: 23px;
+    border-radius: 8px;
 
 }
 
@@ -1451,7 +1470,7 @@ span {
     margin-top: 25px;
    //  -webkit-text-stroke-width: 1px;
    // -webkit-text-stroke-color: black;
-   box-shadow: inset 0 0 15px #000000;
+   box-shadow: inset 0px 4px 14px 0px #f29c93;
    transition: All 0.5s ease;
    position: relative;
    left: 60px;
@@ -1480,6 +1499,7 @@ span {
     cursor: pointer;
     position: relative;
     right: 15px;
+     
 
 }
 
@@ -1617,7 +1637,7 @@ span {
 .userpassword {
     height: 45px;
     width: 500px;
-    font-size: 30px;
+    font-size: 40px;
     border-radius: 8px;
     position: relative;
     bottom: 20px;
@@ -1855,6 +1875,11 @@ span {
 
 }
 
+::-webkit-input-placeholder {
+    color: #ffae34;
+}
+
+ //text-shadow: 0 0 10px #fefcc9, 0 0 20px #feec85, 0 0 30px #ffae34, 0 0 40px #ec760c, 0 0 70px #cd4606, 0 0 80px #973716, 0 0 100px #451b0e, 0 0 150px #ff00de;
 
 
 
